tests/snapshots/cli_help__term_remove_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Remove a term

Usage: mf term remove [OPTIONS] <TERM>

Arguments:
  <TERM>  

Options:
  -f, --force                   Proceed despite safety checks: overwrite an existing target, or
                                remove an entity referenced by others
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -y, --yes                     Skip interactive confirmation prompt
  -n, --dry-run                 Preview changes without writing
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
