tests/snapshots/cli_help__term_update_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Update term metadata

Usage: mf term update [OPTIONS] <TERM>

Arguments:
  <TERM>  

Options:
      --definition <DEFINITION>
          
      --root <PATH>
          Mind Repo root directory
      --config <PATH>
          Config file path
      --description <DESCRIPTION>
          
      --clear-description
          
  -v, --verbose...
          Verbose output
      --confidence <CONFIDENCE>
          
  -q, --quiet
          Silence non-error output
      --clear-confidence
          
  -o, --output <FORMAT>
          Output format [default: text] [possible values: text, json]
      --alias <ALIAS>
          
      --json
          Shorthand for --output json
      --no-color
          Disable colored output
      --tag <TAG>
          
      --delete-alias <DELETE_ALIAS>
          Remove an alias from the term
  -p, --project <NAME_OR_PATH>
          Project name or path (cwd-relative, repo-relative, or absolute)
      --delete-tag <DELETE_TAG>
          Remove a tag from the term
      --add-correction <ORIGINAL[:CORRECT]>
          Append a correction (ORIGINAL[:CORRECT]); defaults to word/required, term name as CORRECT
      --correction-match <ORIGINAL:KIND>
          Set match kind of a correction: ORIGINAL:word|substring|pinyin
      --correction-fix <ORIGINAL:KIND>
          Set fix kind of a correction: ORIGINAL:required|suggested
      --correction-pinyin <ORIGINAL:PINYIN>
          Set pinyin of a correction: ORIGINAL:PINYIN
      --delete-correction <DELETE_CORRECTION>
          Delete a correction by ORIGINAL
  -n, --dry-run
          Preview changes without writing
  -h, --help
          Print help
  -V, --version
          Print version
