tests/snapshots/cli_help__top_level_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
mind-forge: a local-first knowledge management CLI

Usage: mf [OPTIONS] [COMMAND]

Commands:
  init        Initialize a directory as a Mind Repo
  project     Manage projects
  article     Manage articles
  prompt      View prompt projections
  thinking    View thinking projections
  source      Manage content sources
  search      Search the repository-wide RAG corpus
  asset       Manage project assets
  term        Manage terminology [aliases: terms]
  build       Build articles
  publish     Publish articles to configured targets
  render      Generate render prompts (emits prompts only, no output files)
  config      Manage configuration
  completion  Generate shell completion scripts
  version     Show version information

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
